파일경로수정

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AI Brain Storming Web Service</title>
-        <link rel="stylesheet" href="../css/styles.css">
-        <script src="../js/javascript.js" defer></script>
+        <link rel="stylesheet" href="css/styles.css">
+        <script src="js/javascript.js" defer></script>
     </head>
     <body>
         <div class="sidebar">
             <button class="close-button">X</button>
             <ul>
                 <li><a href="#" onclick="window.location.reload();";>New Page</a></li>
-                <li><a href="tag-information.html">Tag Info</a></li>
-                <li><a href="mindmap.html">Settings</a></li>
+                <li><a href="html/tag-information.html">Tag Info</a></li>
+                <li><a href="html/mindmap.html">Settings</a></li>
             </ul>
         </div>
         <header>
