--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <button class="menu-button"></button>
             <div class="center-horizontal">
-                <h style="font-size: 24px;">AI Brain Storming Web Service</h>
+                <h>AI Brain Storming Web Service</h>
             </div>
             <div>
                 <button class="login-button">Login</button>
@@ -29,7 +29,7 @@
         
         <div class="center-vertical" id="main">
             <p style="margin:0;">Let's Start!!!</p>
-            <input type="text" placeholder="What do you want to know?" id="title">
+            <input type="text" placeholder="What do you want to know?" id="input-title">
             <div class="center-horizontal">
                 <input type="text" placeholder="#tag" id="tag">
                 <input type="text" placeholder="#tag" id="tag">
