--- a/html/mindmap.html
+++ b/html/mindmap.html
@@ -10,15 +10,10 @@
 <body>
     <div class="mm-container">
         <div class = "mindmap">
-            <div class="main-topic-container"><!--중심 주제-->
+            <div class="main-topic-container"><!--중심 주제 컨테이너-->
                 <div class="main-topic"><button class="main-button">+</button></div>
             </div>
-            <div class="sub-topic-container"><!--서브 주제-->
-                <!-- 서브 아이템은 동적으로 추가됨 -->
-            </div>
-            <div class="subitem-container"> <!-- 서브 아이템 컨테이너 (추후 동적으로 추가)-->
-                <!-- 서브 아이템은 동적으로 추가됨 -->
-            </div>
+            <div class="sub-topic-container"><!--서브 주제 컨테이너--></div>
         </div>
     </div>
 </body>
