--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="sidebar">
             <button class="close-button">X</button>
             <ul>
-                <li><a href="#" onclick="window.location.reload();";>New Page</a></li>
+                <li><a href="#" onclick="window.location.reload();">New Page</a></li>
                 <li><a href="html/tag-information.html">Tag Info</a></li>
                 <li><a href="html/mindmap.html">Settings</a></li>
             </ul>
